Fix capital typo

--- a/works.html
+++ b/works.html
@@ -74,7 +74,7 @@
                         </div>
                         
                         <div class="imgcontainer">
-                            <a href="Fashionistation.html"><img class="thumbnail" data-alt-src="thumbnailColor/thumbnailColor-06.png" src="thumbnailBw/thumbnailBw-06.png" height="200" width="200"></a>
+                            <a href="fashionistation.html"><img class="thumbnail" data-alt-src="thumbnailColor/thumbnailColor-06.png" src="thumbnailBw/thumbnailBw-06.png" height="200" width="200"></a>
                             <p class="thumbnailtitle thin">Fashionistation</p>
                         </div>       
                     </div>
