favicon, agent app figure fixed

--- a/agent-app.html
+++ b/agent-app.html
@@ -39,7 +39,7 @@
                 </div>
                 
                 <div class="half-width right">
-                    <p class="body">{So many} agents in Kenya and Nigeria are using the Carepay Agent app to enroll new beneficiaries across the country, especially to reach out to the poor living in villages. While the app has been up and running for 2 years, no feedback was gathered nor any UX improvement was made. So this was a perfect opportunity to hear the agents’ voices and make it a ritual to improve the app. </p>
+                    <p class="body">During the peak days, almost 1000 agents in Kenya and Nigeria are using the Carepay Agent app to enroll new beneficiaries across the country, especially to reach out to the poor living in villages. While the app has been up and running for 2 years, no feedback was gathered nor any UX improvement was made. So this was a perfect opportunity to hear the agents’ voices and make it a ritual to improve the app. </p>
                 </div>
             </div>
             
