agent app page favicon

--- a/agent-app.html
+++ b/agent-app.html
@@ -11,7 +11,7 @@
               href = "main.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-        <link rel="icon" href="suhwalee_face.png"/>
+        <link rel="icon" href="favicon.ico"/>
     </head>
     
     <body>
