--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <!-- project 01 -->
                             <a href="design-system.html">
                             <p class="h1 regular project-item-index">01</p>
-                            <p class="h1 compact p-zero">Design System</p>
+                            <p class="h1 compact no-margin">Design System</p>
                             <p class="h3 light italic">Carepay Design System</p>
                             <br>
                             <p class="body ">The Buzzword of the design world - Design System! Learn more about my experience creating one</p>
@@ -60,7 +60,7 @@
                             <!-- project 02 -->
                             <a href="digitalshop.html">
                             <p class="h1 regular project-item-index">02</p>
-                                <p class="h1 compact p-zero">Data-driven Design</p>
+                                <p class="h1 compact no-margin">Data-driven Design</p>
                             <p class="h3 light italic">Digitalshop</p>
                             <br>
                             <p class="body">From quantitative behavioral data to screens, have a glance at my data-driven decision-making process at ABN Amro</p>
@@ -73,7 +73,7 @@
                         <div class="project-column">
                             <a href="payment-alert.html">
                             <p class="h1 regular project-item-index">03</p>
-                            <p class="h1 compact p-zero">Users in the &hearts;</p>
+                            <p class="h1 compact no-margin">Users in the &hearts;</p>
                             <p class="h3 light italic">Payment Alert</p>
                             <br>
                             <p class="body">To delight users with financial updates but not to intimidate, how I dealt with sensitive information</p>
@@ -84,7 +84,7 @@
                         <div class="project-column">
                             <a href="agent-app.html">
                             <p class="h1 regular project-item-index">04</p>
-                            <p class="h1 compact p-zero">User Research X COVID-19</p>
+                            <p class="h1 compact no-margin">User Research X COVID-19</p>
                             <p class="h3 light italic">Carepay Agent app</p>
                             <br>
                             <p class="body">Remote user research experience during the time of pandemic</p>
@@ -98,7 +98,7 @@
                         <div class="project-column" style="opacity: 100%">
                             <a href="change-mobile.html">
                             <p class="h1 regular project-item-index">05</p>
-                            <p class="h1 compact p-zero">Tough Nut to Crack</p>
+                            <p class="h1 compact no-margin">Tough Nut to Crack</p>
                             <p class="h3 light italic">Change My Number</p>
                             <br>
                             <p class="body">A simple solution for complex problems</p>
@@ -109,7 +109,7 @@
                         <div class="project-column">    
                             <a href="onetime.html">
                             <p class="h1 regular project-item-index">06</p>
-                            <p class="h1 compact p-zero">The Favorite</p>
+                            <p class="h1 compact no-margin">The Favorite</p>
                             <p class="h3 light italic">Onetime™</p>
                             <br>
                             <p class="body">Last but not least, this simple world clock app is my favorite by far!</p>
