--- a/change-mobile.html
+++ b/change-mobile.html
@@ -20,8 +20,8 @@
     <body>
         <div id="menu">
             <ul class="menu-ul">
-                <li class="menu-list"><a href=index.html#menu>ABOUT</a></li>
-                <li class="menu-list"><a href=index.html#works>WORKS</a></li>
+                <li class="menu-list"><a href=index.html>ABOUT</a></li>
+                <li class="menu-list"><a href=index.html>WORKS</a></li>
                 <li class="menu-list"><a href=index.html#footer>CONTACT</a></li>
             </ul>
         </div>
