typos in image and text fixed

--- a/design-system.html
+++ b/design-system.html
@@ -42,7 +42,7 @@
                 
                 <div class="half-width right">
                     <p class="body">In early 2020, Carepay’s design system was still in its infancy. 
-                    Based on Brad Frost’s atomic design principles, color schemes and typefaces were defined. A complete set of atoms were designed which were the bases of the molecules, organisms, templates, and pages. This not only improved the consistency of the designs but also eased the communications between the design team and frontend team by offering agreed guidelines on the design.</p>
+                    Based on Brad Frost’s atomic design principles, color schemes and typefaces were defined. A complete set of atoms were designed which were the bases of the molecules, organisms, templates, and pages. This not only improved the consistency of the designs but also eased the communications between the design team and the front-end team by offering agreed guidelines on the design.</p>
                 </div>
             </div>
             
