--- a/design-system.html
+++ b/design-system.html
@@ -52,7 +52,7 @@
                 <div class="half-width left">
                     <span class="index">02</span><span class="h1">Color palette</span>
                     
-                    <p class="body">Our color pallette based on WCAG guidelines. Further more, to be optimized for the target market, we considered 256 color based screen and came up with a set of greyscales to support the low resolution screens.</p>
+                    <p class="body">Our color palette is based on WCAG guidelines. Furthermore, it is optimized to better support the target market, the healthcare industry in Africa using smaller screens with low resolution. We considered the 256-color screen and came up with a set of greyscales that is compatiable.</p>
                 </div>
             </div>
             
