--- a/digitalshop.html
+++ b/digitalshop.html
@@ -42,7 +42,7 @@
                 </div>
                 
                 <div class="half-width right">
-                    <p class="body">We can deal with a lot of matters digitally. The same goes for the banks. We want to deal with our bank matters whenever, wherever they are. ABN Amro, the second biggest Dutch bank, had enabled daily banking on digital platforms and was challenged to offer more regardless of time and location like any other modern banks.
+                    <p class="body">We can deal with a lot of matters digitally. The same goes for the banks. We want to deal with our bank matters whenever, wherever we are. ABN Amro, the second biggest Dutch bank, had enabled daily banking on digital platforms and was challenged to offer more regardless of time and location like any other modern banks.
                     To meet the versatile needs of the digital customers and also to save the cost of running services physically in bank branches, we introduced  a digital shop - digitized financial product acquiring processes
                     as one of those initiatives.</p>
                 </div>
