--- a/agent-app.html
+++ b/agent-app.html
@@ -55,11 +55,9 @@
                 
                 <div class="half-width right">
                     <p class="body">
-                    I believe that concept validation is an important key to create a successful product and service that meets the user needs. So I have also done various validations by conducting a series of usability testing in my career. And COVID-19 pandemic changed my work situation, working from home connecting with colleagues digitally, to begin with. 
-
-                    And Usability testing had to adapt as well. The conventional way is challenged because I simply couldn't fly to Africa, meet the user, and hand over a test device in a laboratory setup.
+                    I believe that concept validation is an important key to create a successful product and service that meets the user needs. So I have also done various validations by conducting a series of usability testing in my career. However, COVID-19 pandemic changed my work situation, working from home connecting with colleagues digitally, to begin with. Usability testing had to adapt as well. The conventional way is challenged because I simply couldn't fly to Africa, meet the user, and hand over a test device in a laboratory setup.
                     <br><br>
-                        So I came up with a setup that can enable me and the team to talk to users of Kenya and Nigeria.
+                    So I came up with a setup that enabled me and the team to talk to users of Kenya and Nigeria.
                     </p>
                 </div>
                     
