--- a/change-mobile.html
+++ b/change-mobile.html
@@ -68,14 +68,14 @@
                 </div>
                 <div class="half-width right">
                     <p class="body">
-                    Although most of us are not used to USSD, it is yet a popular platform that offers a light text-based interactive service in Kenya. It is used to serve not only smartphone users but also feature phone users who are a significant portion of the whole population.<br>
+                    Although most of us are not used to USSD, it is yet a popular platform in Kenya especially to a significant portion of population that does not have a smartphone but a feature phone. It offers a light text-based interactive service that works on both smartphones and feature phones. So it was a good platform to make the service accessible to anyone with a mobile phone.<br>
                     Since the USSD service can recognize the dialer's number, two problems arose.
                     <br><br>
-                    1. The user was never registered but the phone number is recognized (Recycled SIM card issue).
+                    1. The user was never registered but the phone number is previosuly used on our platform by someone else thus recognized (Recycled SIM card issue).
                     <br>
-                    2. The user is registered, but changed the phone and calling from a new number - thus not recognized.
+                    2. The user is registered, but changed a phone number and calling from the new number - thus we cannot recognize the user anymore.
                     <br><br>
-                    To crack these cases, I decided to give a new user to claim the recognized number, and a registered user to claim an existing account.
+                    To crack these cases, I decided to empower a new user to claim the recognized number, and a registered user to claim an existing account.
                     </p>
                 </div>
             </div>
