--- a/change-mobile.html
+++ b/change-mobile.html
@@ -40,7 +40,7 @@
                 </div>
                 
                 <div class="half-width right">
-                    <p class="body">One would say it should be possible to change a phone number of an insurance account, but it wasn't the case for Carepay. While working to build a Change Phone Number feature, we also ran into many "already existing number" problems, due to many users using recycled SIM card in Kenya. Our USSD system which recognizes the caller's phone number was only adding more complexity - a new user with a recycled SIM might be recognized as another existing user, and an existing user who has changed a phone cannot be recognized anymore.</p>
+                    <p class="body">One would say it should be possible to change the phone number of any user account, but it wasn't the case for Carepay. Every user who wished to change the phone number had to call Carepay's customer service, who will pass on the task to a back-end developer. While working to build a Change Phone Number feature to empower the user to change their phone number, we also ran into many "already existing number" problems due to many users using recycled SIM cards in Kenya. Our USSD system which recognizes the caller's phone number was only adding more complexity - a new user with a recycled SIM might be recognized as another existing user, and an existing user who has changed a phone cannot be recognized anymore.</p>
                 </div>
             </div>
             
