--- a/design-system.html
+++ b/design-system.html
@@ -52,7 +52,7 @@
                 <div class="half-width left">
                     <span class="index">02</span><span class="h1">Color palette</span>
                     
-                    <p class="body">Our color palette is based on WCAG guidelines. Furthermore, it is optimized to better support the target market, the healthcare industry in Africa using smaller screens with low resolution. We considered the 256-color screen and came up with a set of greyscales that is compatiable.</p>
+                    <p class="body">Our color palette is based on <a href="https://www.w3.org/WAI/WCAG21/Understanding/use-of-color.html" target="_blank" style="text-decoration: underline">WCAG 2.0</a> (Web Content Accessibility Guidelines). Furthermore, it is optimized to better support the target market, the healthcare industry in Africa using smaller screens with low resolution. We considered the 256-color screen and came up with a set of greyscales that is compatible.</p>
                 </div>
             </div>
             
