--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="project-column">
                             <!-- project 01 -->
                             <a href="design-system.html">
-                            <p class="h1 regular project-item-index">01</p>
+                            <p class="hero regular project-item-index">01</p>
                             <p class="h1 compact no-margin">Design System</p>
                             <p class="h3 light italic">Carepay Design System</p>
                             <br>
@@ -59,7 +59,7 @@
                         <div class="project-column">
                             <!-- project 02 -->
                             <a href="digitalshop.html">
-                            <p class="h1 regular project-item-index">02</p>
+                            <p class="hero regular project-item-index">02</p>
                                 <p class="h1 compact no-margin">Data-driven Design</p>
                             <p class="h3 light italic">Digitalshop</p>
                             <br>
@@ -72,7 +72,7 @@
                         <!-- project 03 -->
                         <div class="project-column">
                             <a href="payment-alert.html">
-                            <p class="h1 regular project-item-index">03</p>
+                            <p class="hero regular project-item-index">03</p>
                             <p class="h1 compact no-margin">Users in the &hearts;</p>
                             <p class="h3 light italic">Payment Alert</p>
                             <br>
@@ -83,7 +83,7 @@
                         <!-- project 04 -->
                         <div class="project-column">
                             <a href="agent-app.html">
-                            <p class="h1 regular project-item-index">04</p>
+                            <p class="hero regular project-item-index">04</p>
                             <p class="h1 compact no-margin">User Research X COVID-19</p>
                             <p class="h3 light italic">Carepay Agent app</p>
                             <br>
@@ -97,8 +97,8 @@
                         <!-- project 05 -->
                         <div class="project-column" style="opacity: 100%">
                             <a href="change-mobile.html">
-                            <p class="h1 regular project-item-index">05</p>
-                            <p class="h1 compact no-margin">Tough Nut to Crack</p>
+                            <p class="hero regular project-item-index">05</p>
+                            <p class="h1 compact">Tough Nut to Crack</p>
                             <p class="h3 light italic">Change My Number</p>
                             <br>
                             <p class="body">A simple solution for complex problems</p>
@@ -108,8 +108,8 @@
                         <!-- project 06 -->
                         <div class="project-column">    
                             <a href="onetime.html">
-                            <p class="h1 regular project-item-index">06</p>
-                            <p class="h1 compact no-margin">The Favorite</p>
+                            <p class="hero regular project-item-index">06</p>
+                            <p class="h1 compact">The Favorite</p>
                             <p class="h3 light italic">Onetime™</p>
                             <br>
                             <p class="body">Last but not least, this simple world clock app is my favorite by far!</p>
