--- a/onetime.html
+++ b/onetime.html
@@ -85,7 +85,7 @@
                 <div class="half-width right">
                     <p class="body">With people living and working globally more and more, Onetime is the way to stay in touch. Onetime also won the 2015 Spark:Digital Award. Download and find more information in the links below.
                     <br><br>
-                    <a class="chip" href="https://apps.apple.com/us/app/onetime/id921569664" target="_blank">Download on Appstore</a>
+                    <a class="appstore" href="https://apps.apple.com/us/app/onetime/id921569664" target="_blank">Download on Appstore</a>
                     </p>
                 </div>
             </div>
