Color library image fixed

--- a/design-system.html
+++ b/design-system.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             
-            <div class="full-width">
+            <div class="full-width" style="margin: -16px">
                 <img src="Assets/design-system/color-library.png">
             </div>
             
