--- a/digitalshop.html
+++ b/digitalshop.html
@@ -63,7 +63,7 @@
             <div class="full-width">
                 <img src="Assets/digitalshop/survey-flow.png">
                 <img src="Assets/digitalshop/willingness-chart-not-final.png">
-                <div class="half-width center align-center"><p class="body">Our research revealed that users in their 10~30s have significantly higher interest in acquiring financial products digitally.</p> </div>
+                <div class="half-width center align-center"><p class="h1 regular italic">Our research revealed that users in their 10~30s have significantly higher interest in acquiring financial products digitally.</p> </div>
             </div>
 
 
