--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <ul class="menu-ul">
                 <li class="menu-list"><a href=index.html#about>ABOUT</a></li>
                 <li class="menu-list"><a href=index.html#works>WORKS</a></li>
+                <li class="menu-list"><a href=not-work.html>NOT WORK</a></li>
                 <li class="menu-list"><a href=index.html#footer>CONTACT</a></li>
             </ul>
         </div>
