--- a/template.html
+++ b/template.html
@@ -22,7 +22,8 @@
             <ul class="menu-ul">
                 <li class="menu-list"><a href=index.html>ABOUT</a></li>
                 <li class="menu-list"><a href=index.html>WORKS</a></li>
-                <li class="menu-list"><a href=index.html#footer>CONTACT</a></li>
+                <li class="menu-list"><a href=not-work.html>NOT WORK</a></li>
+                <li class="menu-list"><a href=#footer>CONTACT</a></li>
             </ul>
         </div>
     
