--- a/not-work.html
+++ b/not-work.html
@@ -21,7 +21,7 @@
         <div id="menu">
             <ul class="menu-ul">
                 <li class="menu-list"><a href=index.html>ABOUT</a></li>
-                <li class="menu-list"><a href=index.html#works>WORKS</a></li>
+                <li class="menu-list"><a href=index.html>WORKS</a></li>
                 <li class="menu-list"><a href=not-work.html>NOT WORK</a></li>
                 <li class="menu-list"><a href=#footer>CONTACT</a></li>
             </ul>
