--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <div class="menu-ul" id="menu">
                 <a href="index.html#about" class="active">ABOUT</a>
-                <a href="index.html#works">WORKS</a>
+                <a href="index.html#works">WORK</a>
                 <a href="not-work.html">NOT WORK</a>
                 <a href="index.html#footer">CONTACT</a>
                 <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
