--- a/template.html
+++ b/template.html
@@ -94,6 +94,7 @@
             <p class="h3">Suhwa Lee</p>
             <p class="body">suhwa.christina.lee@gmail.com</p>
             <a href="https://www.linkedin.com/in/suhwalee/"><img class="logo" src="Assets/home/logo-linkedin.png"></a>
+            <a href="https://suhwalee.medium.com" target="_blank" style="padding-left: 8px"><img class="logo" src="Assets/home/logo-medium.png"></a>
         </div>
         
         
