Onetime video link

--- a/onetime.html
+++ b/onetime.html
@@ -49,7 +49,7 @@
             
             <div class="full-width center">
                 <video width="325px" autoplay loop class="center img-width">
-                    <source src="assets/onetime/onetime.mp4" type="video/mp4">
+                    <source src="https://github.com/ssuatheowl/SuhwaLee/blob/master/Assets/onetime/onetime.mp4" type="video/mp4">
                 </video>
             </div>
 
