--- a/onetime.html
+++ b/onetime.html
@@ -48,9 +48,7 @@
             
             
             <div class="full-width center">
-                <video width="325px" autoplay loop class="center img-width">
-                    <source src="https://github.com/ssuatheowl/SuhwaLee/blob/master/Assets/onetime/onetime.mp4" type="video/mp4">
-                </video>
+                <img src="Assets/onetime/onetime.gif" style = "width: 320px;" class="img-width center">
             </div>
 
             <!-- 02 -->
