--- a/onetime.html
+++ b/onetime.html
@@ -48,7 +48,7 @@
             
             
             <div class="full-width center">
-                <img src="Assets/onetime/onetime.gif" style = "width: 320px;" class="img-width center">
+                <img src="Assets/onetime/onetime-loop.gif" style = "width: 325px;" class="img-width center">
             </div>
 
             <!-- 02 -->
