--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <a href="digitalshop.html">
                             <p class="hero regular project-item-index">02</p>
                                 <p class="h1 compact no-margin">Data-driven Design</p>
-                            <p class="h3 light italic">Digitalshop</p>
+                            <p class="h3 light italic">Digitalshop for Mobile banking</p>
                             <br>
                             <p class="body">From quantitative behavioral data to screens, have a glance at my data-driven decision-making process at ABN Amro</p>
                             </a>
@@ -76,7 +76,7 @@
                             <a href="payment-alert.html">
                             <p class="hero regular project-item-index">03</p>
                             <p class="h1 compact no-margin">Users in the &hearts;</p>
-                            <p class="h3 light italic">Payment Alert</p>
+                            <p class="h3 light italic">Payment Alert for Mobile banking</p>
                             <br>
                             <p class="body">To delight users with financial updates but not to intimidate, how I dealt with sensitive information</p>
                             </a>
@@ -96,7 +96,7 @@
                     
                     <!-- row 3 -->
                     <div class="project-row">
-                        <!-- project 05 -->
+                        <!-- project 05
                         <div class="project-column" style="opacity: 100%">
                             <a href="change-mobile.html">
                             <p class="hero regular project-item-index">05</p>
@@ -106,11 +106,12 @@
                             <p class="body">A simple solution for complex problems</p>
                             </a>
                         </div>
+                        -->
                         
-                        <!-- project 06 -->
+                        <!-- project 06 -> 05 -->
                         <div class="project-column">    
                             <a href="onetime.html">
-                            <p class="hero regular project-item-index">06</p>
+                            <p class="hero regular project-item-index">05</p>
                             <p class="h1 compact">The Favorite</p>
                             <p class="h3 light italic">Onetime™</p>
                             <br>
