changed links in index2023

--- a/index2023.html
+++ b/index2023.html
@@ -63,7 +63,7 @@
                         <br>
                         <br>
                         <br>
-                        <a class="button-secondary" href="design-system.html">
+                        <a class="button-secondary" href="dashboard.html">
                             View UX projects
                         </a>
                     </div>
@@ -97,7 +97,7 @@
                         
                         <br>
                         <br>
-                        <a class="button-secondary" href="design-system.html">
+                        <a class="button-secondary" href="hydrogen.html">
                             View service design projects
                         </a>
                     </div>                  
