added flexbox for reponsiveness

--- a/dashboard.html
+++ b/dashboard.html
@@ -25,8 +25,8 @@
     
     <body>
         <div class="menu-ul" id="menu">
-                <a href="index2023.html" class="active">HOME</a>
-                <a href="index2023.html#works">WORK</a>
+                <a href="index.html#about">HOME</a>
+                <a href="index.html#work">WORK</a>
                 <a href="not-work.html">NOT WORK</a>
                 <a href="index.html#footer">CONTACT</a>
                 <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
