--- a/hydrogen.html
+++ b/hydrogen.html
@@ -23,8 +23,8 @@
     
     <body>
         <div class="menu-ul" id="menu">
-                <a href="index2023.html" class="active">HOME</a>
-                <a href="index2023.html">WORK</a>
+                <a href="index.html">HOME</a>
+                <a href="index.html#work">WORK</a>
                 <a href="not-work.html">NOT WORK</a>
                 <a href="index.html#footer">CONTACT</a>
                 <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
