--- a/hydrogen.html
+++ b/hydrogen.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Portfolio of Suhwa Lee">
         <link rel = "stylesheet"
               type = "text/css"
-              href = "main2023." />
+              href = "main.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap" rel="stylesheet">
