dashboard project content edited
grammar checks

--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,7 @@
                 Product design:<br>
                 Dashboard for Innovation
                 </p>
-                <p class="body-text2">Creating a beautiful and functional dashboard that shows innovation projects in the innovation funnel to track progress and improve its exposure, using the very innovation funnel model in our development process.</p>
+                <p class="body-text2"> Creating a beautiful and functional dashboard that displays innovation projects within the innovation funnel, enabling innovation managers to track progress and enhance their exposure.</p>
                 <br><br>
 
                 <p class="body-text bold">
@@ -60,16 +60,16 @@
                     SUMMARY
                 </p>
                 <p class="body-text2">
-                    My client was seeking for an effective way to visualize their progress after adopting the innovation funnel methodology. We, a team of 3 designers, designed a beautiful dashboard that provides an at-a-glance overview of the entire innovation funnel and details of each innovation project. Together with 2 developers and 1 data analyst, we also delivered an MVP powered by PowerBI. We applied an adapted innovation funnel methodology ourselves too, from problem validation, concept validation to creating an MVP. During the process I led the design team and collaborated closely with developers and data analyst. Our design was so successful that it was presented to the CEO and shared during the company’s annual meeting.
+                    My client sought an effective way to visualize their progress after adopting the innovation funnel methodology. As a team of three designers, we crafted a beautiful dashboard that offers an at-a-glance overview of the entire innovation funnel, along with detailed insights into each innovation project. Collaborating with two developers and one data analyst, we delivered an MVP powered by PowerBI. We also applied an adapted innovation funnel methodology ourselves, spanning problem validation, concept validation, and MVP creation. Throughout the process, I led the design team and worked closely with developers and the data analyst. Our design achieved such success that it was not only presented to the CEO but also shared during the company's annual meeting.
                 </p>
             </div>
 
             <div class="container col8-width">
                 <p class="h1 regular">
-                    THE PROBLEM
+                    THE ASK
                 </p>
                 <p class="body-text2">
-                    A corporation recently had adopted the innovation funnel methodology. There were many initiatives being logged into their project management system (Viima). However the overview of the entire innovation funnel was lacking and the progress of each projects were tracked rather manually. The statistics were kept in an Excel spreadsheet and monthly reports were created based on the spreadsheet in PDFs, which was quite a labor-intensive. Because of this, innovation managers and vice presidents in various departments were struggling to visualize and track their progress. So we have been told to design a digital dashboard that could track the real-time progress of the innovation projects in the innovation funnel.
+                    The client's organization had recently adopted the innovation funnel methodology, resulting in numerous initiatives being logged into their project management system, Viima. We were tasked with designing a digital dashboard capable of tracking the real-time progress of innovation projects within the innovation funnel.
                 </p>
             </div>
 
@@ -80,13 +80,17 @@
                     — WITH USER INTERVIEWS
                 </p>
                 <p class="body-text2">
-                    The idea to have a real-time dashboard that will show the progress of the innovation seemed promising. And we wanted to make sure to validate that there were unmet needs that will be resolved by building the dashboard. So we conducted interviews with innovation managers and validated that the problem really exists.
+                    a real-time dashboard to track innovation progress appeared promising. To ensure that there were indeed unmet needs that could be addressed through this dashboard, we conducted interviews with innovation managers to validate the existence of the problem.
                 </p>
                 <img class= "round-corner" src="Assets/dashboard/interview.png">
 
                 <p class="body-text2">
-                    Innovation managers were struggling to gain expose their projects to inspire others. Vice presidents of each department wanted to have an engaging overview of innovations within their department. We also had to meet the chairman’s unmet needs, that he would like to track potential revenue that could be earned by innovation projects in the funnel.<br>
-                    We created personas that represents needs of various end-users.<br><br><br><br>
+                    Despite the influx of initiatives, they lacked a comprehensive overview of the entire innovation funnel. The progress of each project was tracked manually, with statistics maintained in an Excel spreadsheet, and monthly reports laboriously generated from the spreadsheet into PDFs—a labor-intensive process.
+                    <br><br>
+                    As a result, innovation managers and vice presidents across various departments found it challenging to visualize and monitor their progress. Innovation managers struggled to gain exposure for their projects to inspire others, while vice presidents of each department desired an engaging overview of innovations within their respective departments. Additionally, we needed to address the chairman's unmet need to track the potential revenue that could be earned from innovation projects in the funnel.
+                    <br><br>
+                    Based on the learnings, we created personas representing the needs of various end-users.
+                    <br><br><br><br>
                 </p>
                 <img class= "round-corner no-margin" src="Assets/dashboard/Persona-divisional-manager.jpg">
                 <img class= "round-corner no-margin" src="Assets/dashboard/Persona-regional-manager.jpg">
@@ -94,13 +98,13 @@
                 <img class= "round-corner no-margin" src="Assets/dashboard/Persona-chairman.jpg">
 
                 <p class="body-text2">
-                 Along the research process, we learned the following.
+                During the research process, we discovered the following key insights:
                 <br><br>
-                • There is a great willingness to use the Digital dashboard.
+                • There is a strong willingness to use the Digital dashboard.
                 <br>
-                • There is a need to raise awareness in metrics to measure the success of digital innovation initiatives, and the Digital dashboard can help this.
+                • There is a need to enhance awareness of metrics for measuring the success of digital innovation initiatives, and the Digital dashboard can facilitate this.
                 <br>
-                • Targets are important to show to put the metrics into perspective. Monthly targets are prevalent, and graphs need to support this and show monthly progress.
+                • Setting targets is crucial to provide context for the metrics. Monthly targets are commonly used, and the graphs should align with these targets and display monthly progress.
                 <br>
                 </p>
 
@@ -111,7 +115,7 @@
                     CREATING CONCEPTS
                 </p>
                 <p class="body-text2">
-                    Based on our learnings, we explored ways to relieve the pain of our personas, and continued creating and improving concepts in an iterative manner.
+                    Building on our insights, we embarked on a journey to alleviate the challenges faced by our personas. We followed an iterative approach, continuously creating and refining concepts to address their needs.
                 </p>
             </div>
 
@@ -122,7 +126,7 @@
             </div>
             <div class="container col8-width">
                 <p class="body-text2">
-                    To give an idea, these are examples of our design strategies and learnings from our user research, that shaped our next design strategies.
+                    As an illustration, here are some examples of our design strategies and the insights gained from our user research that influenced our subsequent design strategies.
                 </p><br><br>
                 <img src="Assets/dashboard/iteration-table.png">
             </div>
@@ -133,8 +137,9 @@
                     VALIDATING ASSUMPTIONS
                 </p>
                 <p class="body-text2">
-                    We created concepts based on validated insights and assumptions. As soon as we had wireframes ready, we continuously validated our concepts with our potential end-users. 
-                    I made sure that we take a structured approach by <span class="underline-wavy">documenting our assumptions and validating them via our research efforts.</span> Our assumptions also addressed multiple domains: desirability, business viability and technical feasibility.
+                    We developed multiple versions of concepts in wireframes, rooted in validated insights and assumptions. We continuously validated these concepts with our potential end-users.
+                    <br><br>
+                    I ensured that we followed a structured approach by <span class="underline-wavy">documenting our assumptions and testing them through our research efforts.</span> These assumptions covered various domains, including desirability, business viability, and technical feasibility.
                 </p>
                 <br><br>
             </div>
@@ -156,11 +161,10 @@
                     FROM DESIGN TO MVP
                 </p>
                 <p class="body-text2">
-                    We explored how we are going to power the dashboard. Via a few workshops that was facilitated by me, we created a service blueprint that illustrates how we will power the imagined customer journey with available human and technical resources.
-                </p>
-
-                <p class="body-text2">
-                    I also facilitated a couple of user story mapping sessions to help creating a high-level backlog with epics and user stories so we can create a functional product that can benefit our intended end-users.
+                    We delved into the means of powering the dashboard through a series of workshops, which I facilitated. During these sessions, we crafted a service blueprint that outlines how we will support the envisioned customer journey using our available human and technical resources.
+                    <br>
+                    <br>
+                    Additionally, I led a couple of user story mapping sessions to assist in forming a high-level backlog containing epics and user stories. This approach allowed us to develop a functional product that could provide tangible benefits to our intended end-users.
                 </p>
             </div>
             <img class= "round-corner center full-width-width" src="Assets/dashboard/serviceBlueprint.jpg">
