updated index content
grammar checks

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
                 Hi, I am Suhwa.<br>
                 I am a product designer with strong UX skills
                 </p>
-                <p class="body-text">With 8+ years of hands-on experience, I create products and product strategies that put users at the center, resulting in valuable products for both customers and the business. I make that happen by establishing a solid understanding of the users via qualitative and quantitative data.<br>
-                I've recently expanded my repertoire to include service design, not only to enhance customer journey but also to ensure the operational efficiency of a business.</p>
+                <p class="body-text">With over 8 years of hands-on experience, I create products and product strategies that place users at the center, resulting in valuable products for both customers and the business. I achieve this by establishing a solid understanding of the users through qualitative and quantitative data.
+                <br>
+                Recently, I have expanded my repertoire to include service design, not only to enhance the customer journey but also to ensure the operational efficiency of a business.</p>
             </div>
             
             <p class="hero light align-center">
@@ -58,7 +59,7 @@
                             <img class="no-margin round-corner img-hover" src="Assets/home/UX-hover.png">
                         </div>
                         <p class="body-text2 project-description">
-                        I create user-friendly designs through various usability assessment such as <a class="underline" href="https://www.nngroup.com/articles/pure-method/">PURE</a>, SUS and remote/on-site usability testing. My designs are feasible thanks to my collaborative nature and knowledge in HTML/CSS.</p>
+                        I create user-friendly designs through various usability assessments such as <a class="underline" href="https://www.nngroup.com/articles/pure-method/">PURE</a>, SUS, and remote/on-site usability testing. My designs are feasible, thanks to my collaborative nature and knowledge of HTML/CSS.</p>
                         <br>
                         <a class="button-secondary" href="dashboard.html">
                             View UX projects
@@ -72,7 +73,7 @@
                             <img class="no-margin round-corner" src="Assets/home/ProductDesign.png">
                             <img class="no-margin round-corner img-hover" src="Assets/home/ProductDesign-hover.png">
                         </div>
-                        <p class="body-text2 project-description">I validate business ideas and create concepts that will deliver value, using well-known methodologies such as: Double diamond, Design thinking, Lean UX and Innovation funnel.</p>
+                        <p class="body-text2 project-description">I validate business ideas and create concepts that will deliver value using well-known methodologies such as the Double Diamond, Design Thinking, Lean UX, and Innovation Funnel.</p>
                         <br>
                         <a class="button-secondary" href="design-system.html">
                             View product design projects
@@ -87,7 +88,7 @@
                             <img class="no-margin round-corner" src="Assets/home/ServiceDesign.png">
                             <img class="no-margin round-corner img-hover" src="Assets/home/ServiceDesign-hover.png">
                         </div>
-                        <p class="body-text2 project-description">I wear many hats: a researcher to discover unmet needs, a design-thinker to brainstorm ideas and a strategist to spin them into valuable projects — all in an effort to optimize your customer journey and to bring value to your business.</p>
+                        <p class="body-text2 project-description">I wear multiple hats, serving as a researcher to discover unmet needs, a design thinker to brainstorm ideas, and a strategist to translate them into valuable projects—all to optimize your customer journey and bring value to your business.</p>
                         <br>
                         <a class="button-secondary" href="hydrogen.html">
                             View service design projects
